Added signup page and linked those 2 pages together

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       
           <button type="submit">Login</button>
 
-          <button onclick="location.href='https://www.google.com'" type="button">
+          <button onclick="location.href='signup.html'" type="button">
             Create account</button>
           <label>
             <input type="checkbox" checked="checked" name="remember"> Remember me
