--- a/signup.html
+++ b/signup.html
@@ -44,7 +44,7 @@
         <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
     
         <div class="clearfix">
-            <button type="button" class="cancelbtn">Cancel</button>
+            <button type="button" class="cancelbtn" onclick="location.href='index.html'">Cancel</button>
             <button type="submit" class="signupbtn">Sign Up</button>
         </div>
         </div>
