--- a/fuelQuoteForm.html
+++ b/fuelQuoteForm.html
@@ -7,7 +7,7 @@
 <body>
     <form action="action_page.php" style="border:1px solid #ccc">
         <div class="container">
-        <h1>Fuel Quote Form<i onclick="location.href='user.html'" class='far fa-user-circle'></i></h1>
+        <h1>Fuel Quote Form<i onclick="location.href='profile.html'" class='far fa-user-circle'></i></h1>
         <p>Please fill out the following fields to recieve your quote.</p>
         <hr>
     
@@ -21,7 +21,7 @@
         <label for="delivDate"><b>Delivery Date</b></label>
         <br><br>
         <input type ="date" placeholder="Enter Full Name" name="delivDate" required>
-        <p>If address is incorrect please fix on <a href="user.html" style="color:dodgerblue">User Profile</a>.</p>
+        <p>If address is incorrect please fix on <a href="profile.html" style="color:dodgerblue">User Profile</a>.</p>
 
             
         <label for="suggestedPrice"><b>Suggested Price / gallon:</b></label>
