--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <head>
-<title>Login</title>
-<link rel="stylesheet" href="index.css">
+  <title>Login</title>
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-    <form action="action_page.php" method="post">
-  
-        <div class="container">
-          <label for="uname"><b>Username</b></label>
-          <input type="text" placeholder="Enter Username" name="uname" required>
-      
-          <label for="psw"><b>Password</b></label>
-          <input type="password" placeholder="Enter Password" name="psw" required>
-      
-          <button type="submit">Login</button>
+  <form action="fuelQuoteForm.html" method="post">
+    <div class="container">
+      <label for="uname"><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="uname" required />
 
-          <button onclick="location.href='signup.html'" type="button">
-            Create account</button>
-          <label>
-            <input type="checkbox" checked="checked" name="remember"> Remember me
-          </label>
-        </div>
+      <label for="psw"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required />
 
-        <div class="container" style="background-color:#f1f1f1">
-          <button type="button" class="cancelbtn">Cancel</button>
-          <span class="psw">Forgot <a href="#">password?</a></span>
-        </div>
-    </form>    
+      <button type="submit">Login</button>
+
+      <button onclick="location.href='signup.html'" type="button">
+        Create account
+      </button>
+      <label>
+        <input type="checkbox" checked="checked" name="remember" /> Remember me
+      </label>
+    </div>
+
+    <div class="container" style="background-color: #f1f1f1">
+      <button type="button" class="cancelbtn">Cancel</button>
+      <span class="psw">Forgot <a href="#">password?</a></span>
+    </div>
+  </form>
 </body>
