Update linking files

--- a/profile.html
+++ b/profile.html
@@ -71,7 +71,13 @@
       />
 
       <div class="clearfix">
-        <button type="button" class="cancelbtn">Cancel</button>
+        <button
+          type="button"
+          class="cancelbtn"
+          onclick="location.href='fuelQuoteForm.html'"
+        >
+          Cancel
+        </button>
         <button
           onclick="location.href='fuelQuoteForm.html'"
           type="submit"
