Fixing form submission

--- a/profile.html
+++ b/profile.html
@@ -78,13 +78,7 @@
         >
           Cancel
         </button>
-        <button
-          onclick="location.href='fuelQuoteForm.html'"
-          type="submit"
-          class="signupbtn"
-        >
-          Save Profile
-        </button>
+        <button type="submit" class="signupbtn">Save Profile</button>
       </div>
     </div>
   </form>
