--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-  <form action="action_page.php" style="border: 1px solid #ccc">
+  <form action="profile.html" style="border: 1px solid #ccc">
     <div class="container">
       <h1>Sign Up</h1>
       <p>Please fill in this form to create an account.</p>
@@ -37,13 +37,7 @@
         >
           Cancel
         </button>
-        <button
-          onclick="location.href='profile.html'"
-          type="submit"
-          class="signupbtn"
-        >
-          Sign Up
-        </button>
+        <button type="submit" class="signupbtn">Sign Up</button>
       </div>
     </div>
   </form>
