Changing background picture

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-  <form action="fuelQuoteForm.html" method="post">
+  <form action="fuelQuoteForm.html">
     <div class="container">
       <label for="uname"><b>Username</b></label>
       <input type="text" placeholder="Enter Username" name="uname" required />
