finalizing all changes

--- a/fuelQuoteForm.html
+++ b/fuelQuoteForm.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <form action="action_page.php" style="border:1px solid #ccc">
+    <form action="history.html" style="border:1px solid #ccc">
         <div class="container">
         <h1>Fuel Quote Form<i onclick="location.href='profile.html'" class='far fa-user-circle'></i></h1>
         <p>Please fill out the following fields to recieve your quote.</p>
