--- a/history.html
+++ b/history.html
@@ -4,7 +4,7 @@
     <script src="https://kit.fontawesome.com/7890dbf088.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h2>Fuel Quote History<i onclick="location.href='profile.html'" class='far fa-user-circle'></i></h2>
+    <h1>Fuel Quote History<i onclick="location.href='profile.html'" class='far fa-user-circle'></i></h1>
 <div class="table-wrapper">
     <table class="fl-table">
         <thead>
@@ -27,5 +27,9 @@
         </tr>
         <tbody>
     </table>
+
 </div>
+    <div class="clearfix">
+        <button type="button" class="cancelbtn" onclick="location.href='fuelQuoteForm.html'">Go Back</button>
+    </div>
 </body>
